Don't invert warning banner in dark mode

--- a/src/extension/sites/common/invert-on-dark.css
+++ b/src/extension/sites/common/invert-on-dark.css
@@ -1,6 +1,9 @@
 @media (prefers-color-scheme: dark) {
-    body, img {
+    body {
         background-color: #1a1a1a;
+    }
+
+    body, img, .warning.banner {
 				filter: invert();
     }
 }
